# 4ever

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  fourever.opam
archive/: dune  gen.ml
archive/2016/2016_03_12_td4t/: dune  tournoi_2016.ml
archive/2016/2016_03_12_td4t/results/: ranks
archive/2016/2016_05_06_ulm/: dune  ulm_2016.ml
archive/2016/2016_05_06_ulm/results/: ranks
archive/2016/2016_06_03_essec/: dune  essec_2016.ml
archive/2016/2016_06_03_essec/results/: ranks
archive/2017/: archive_2017.ml  dune
archive/2017/results/: cc_ulm  jnj_ulm
archive/2018/: archive_2018.ml  dune
archive/2018/results/: cc_ulm  jnj_ulm_classic  jnj_ulm_veteran
archive/2019/: archive_2019.ml  dune
archive/2019/results/: cc_ulm  p4t_confirme  p4t_debutants  p4t_invite  p4t_invite_moderne  p4t_invite_old_school
archive/2020/: archive_2020.ml  dune
archive/2020/results/: cc_ulm  jnj_ulm_veteran
archive/2022/: archive_2022.ml  dune
archive/2022/results/: p4t_inter  p4t_invite  p4t_novice  ulm_choregraphy
archive/2023/: archive_2023.ml  dune
archive/2023/results/: 4twc_inter  4twc_novice  cc_ulm  p4t_inter  p4t_invite  p4t_novice
archive/2024/: archive_2024.ml  dune
archive/2024/results/: 4ttq_inter  4ttq_novice  4twc_inter  4twc_novice  p4t_inter  p4t_novice  plage_inter  plage_novice  spooky_inter  spooky_novice  strictly_paris_inter  strictly_paris_novice
archive/2025/: archive_2025.ml  dune
archive/2025/results/: 4ttq_inter  4ttq_novice  4twc_flocons  4twc_inter  4twc_novice  funky_allin_follows  funky_allin_leaders  funky_double_trouble  funky_steal  funky_strictly_adv  funky_strictly_inter  funky_strictly_novice  p4t_advanced  p4t_allin_follows  p4t_allin_leaders  p4t_inter  p4t_novice  plage_inter  plage_novice  spooky_advanced  spooky_inter  spooky_novice
archive/2026/: archive_2026.ml  dune
archive/2026/results/: 4twc_adv  4twc_flocons  4twc_inter  4twc_novice
archive/template/: dune  event_name.ml
archive/template/results/: ranks
src/: dune
src/lib/: bool.ml  category.ml  competition.ml  conv.ml  dancer.ml  date.ml  division.ml  divisions.ml  dune  event.ml  id.ml  import.ml  kind.ml  promotion.ml  rank.ml  results.ml  role.ml  state.ml  util.ml
src/web/: about.ml  about_html.eml.html  badge.ml  competitions.ml  competitions_html.eml.html  dancers.ml  dancers_html.eml.html  dune  error.ml  error_html.eml.html  events.ml  events_html.eml.html  faq.ml  faq_html.eml.html  index.ml  index_html.eml.html  links.eml  main.ml  misc.ml  options.ml  page.ml  rules.ml  rules_html.eml.html  state.ml  template.eml.html
test/: fourever.sqlite
