
(executable
  (name       gen)
  (libraries
    ; main lib + deps
    fourever progress
    ; competitions
    archive_2017
    archive_2018
    archive_2019
    archive_2020
    archive_2022
    archive_2023
  )
)

(rule
  (targets db.sqlite)
  (action (run ./gen.exe))
)

(install
  (files db.sqlite)
  (section share)
  (package fourever)
)
