
(executable
  (name         main)
  (public_name  fourever)
  (libraries
    ocb dream cmdliner fourever
  )
)

; Dream templates
(rule
 (targets template.ml)
 (deps template.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets links.ml)
 (deps links.eml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets index_html.ml)
 (deps index_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets error_html.ml)
 (deps error_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets faq_html.ml)
 (deps faq_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets about_html.ml)
 (deps about_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets events_html.ml)
 (deps events_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets competitions_html.ml)
 (deps competitions_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
(rule
 (targets dancers_html.ml)
 (deps dancers_html.eml.html)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

